<resources>
    <string name="app_name">Melhora IFAM</string>
    <string name="email_institucional">E-mail Institucional</string>
    <string name="senha">Senha</string>
    <string name="redefinir_senha">Recuperar a senha?</string>
    <string name="logar">Entrar</string>
    <string name="cadastro_mensagem">Não possui uma conta? Cadastre-se</string>
    <string name="erro_login">*E-mail e/ou senha incorretos</string>
    <string name="nome">Nome</string>
    <string name="celular">Celular</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senha_min_caract">Mínimo de 8 caracteres</string>
    <string name="email_invalido">* E-mail inválido</string>
    <string name="email_cadastrado">E-mail cadastrado</string>
    <string name="nome_invalido">* Nome Inválido</string>
    <string name="celular_invalido">* Celular inválido</string>
    <string name="senha_invalido">* Senha Inválida</string>
    <string name="voltar_login">Voltar</string>
    <string name="enviar">Enviar</string>
    <string name="home">Página Inicial</string>
    <string name="ocorrencias">Ocorrências</string>
    <string name="usuarios">Usuários</string>
    <string name="perfil">Perfil</string>
    <string name="adicionar_ocorrencia">Adicionar ocorrência</string>
    <string name="voltar">Voltar</string>
    <string name="notificacoes">Notificações</string>
    <string name="gerar_relatorio">Gerar Relatório</string>
    <string name="salvar">Salvar</string>
    <string name="envie_uma_mensagem">Envie uma mensagem…</string>
    <string name="promover">Promover a administrador?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="registro_de_ocorrencia">Registro de Ocorrência</string>
    <string name="warning">Certifique-se de que não há uma ocorrência similar registrada</string>
    <string name="pesquisar_ocorrencias">Pesquisar ocorrências</string>
    <string name="pesquisar_usuarios">Pesquisar usuários</string>
    <string name="mais_recentes">Mais recentes</string>
    <string name="por_local">Por local</string>
    <string name="por_status">Por status</string>
    <string name="por_categoria">Por categoria</string>
    <string name="por_prioridade">Por prioridade</string>
    <string name="mais_recentes_txt">Ocorrências públicas - Mais recentes</string>
    <string name="por_local_txt">Ocorrências públicas - Por local</string>
    <string name="por_status_txt">Ocorrências públicas - Por status</string>
    <string name="por_categoria_txt">Ocorrências públicas - Por categoria</string>
    <string name="por_prioridade_txt">Ocorrências públicas - Por prioridade</string>
    <string name="titulo">Título</string>
    <string name="autor_da_ocorrencia">Autor da ocorrẽncia</string>
    <string name="titulo_placeholder">Ex: Cadeiras Quebradas na Sala</string>
    <string name="descricao">Descrição</string>
    <string name="descricao_placeholder">Relate aqui…</string>
    <string name="descricao_problema">Descrição do Problema</string>
    <string name="descricao_problema_texto">Muitas cadeiras da sala 118 estão danificadas, o que prejudica o conforto e a postura dos alunos e professores.</string>
    <string name="status_ocorrencia">Status da Ocorrência</string>
    <string name="minhas_ocorrencias">Minhas Ocorrências</string>
    <string name="status">Status</string>
    <string name="prioridade">Prioridade</string>
    <string name="nivel_1">Nível 1</string>
    <string name="nivel_2">Nível 2</string>
    <string name="nivel_3">Nível 3</string>
    <string name="nivel_4">Nível 4</string>
    <string name="n1">N1</string>
    <string name="n2">N2</string>
    <string name="n3">N3</string>
    <string name="n4">N4</string>
    <string name="prioridade1">Pr.1</string>
    <string name="prioridade2">Pr.2</string>
    <string name="prioridade3">Pr.3</string>
    <string name="prioridade4">Pr.4</string>
    <string name="local">Local</string>
    <string name="local_especifico">Local Específico</string>
    <string name="local_especifico_placeholder">Ex: Sala 02</string>
    <string name="local_texto">CTzinho - Sala 118</string>
    <string name="categoria">Categoria</string>
    <string-array name="categoria_options">
        <item>Internet</item>
        <item>Energia</item>
        <item>Móveis</item>
        <item>Eletrônicos</item>
        <item>Água</item>
        <item>Obras</item>
        <item>Terreno</item>
        <item>Iluminação</item>
        <item>Outro</item>
    </string-array>
    <string name="numero_processo">n° 0001/2024</string>
    <string name="data_ocorrencia">01 nov 2024</string>
    <string name="imagem">Imagem</string>
    <string name="imagem_placeholder">Arquivo .png ou .jpeg</string>
    <string name="notif">Mensagens</string>
    <string name="usuario">Nome do Usuário</string>
    <string name="email">usuario@email.com</string>
    <string name="telefone">(00) 00000–0000</string>
    <string name="imagem_usuario">Imagem do Usuário</string>
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="termos_condicoes">
        <![CDATA[
        Termos e Condições
        Data de Vigência: 19/12/2024

        Bem-vindo ao aplicativo Melhora IFAM. Ao baixar, acessar ou usar este App, você concorda em cumprir estes Termos e Condições. Leia-os atentamente antes de utilizar o App.

        1. Aceitação dos Termos
        Ao usar o App, você reconhece que leu, entendeu e concorda com estes Termos. Caso não concorde, por favor, não utilize o App.

        2. Objetivo do App
        Este App foi desenvolvido para otimizar o processo de registro e gerenciamento de ocorrências no Instituto Federal do Amazonas, Campus Manaus Zona Leste.

        3. Responsabilidades do Usuário
        Você é responsável pela precisão de todas as informações fornecidas através do App.
        Você concorda em usar o App em conformidade com as leis e regulamentos aplicáveis.

        4. Permissões de Acesso
        Para oferecer uma experiência completa, o App requer acesso aos seguintes recursos do dispositivo:
        4.1 Câmera
        O App pode solicitar acesso à câmera do seu dispositivo para capturar imagens necessárias para o registro de ocorrências ou outras funcionalidades do sistema.
        4.2 Galeria de Imagens
        O App pode acessar sua galeria de imagens ou biblioteca de fotos para carregar imagens previamente capturadas, relacionadas a ocorrências ou interações do usuário.
        4.3 Arquivos e Documentos
        O App pode acessar o armazenamento do seu dispositivo para permitir o upload de arquivos, download de relatórios ou outros documentos relevantes relacionados a ocorrências.

        5. Uso de Dados e Privacidade
        Sua privacidade é importante para nós. Todos os dados coletados pelo App, incluindo imagens e arquivos, serão utilizados exclusivamente para fins de gerenciamento de ocorrências e melhoria da experiência do usuário. Consulte nossa Política de Privacidade para obter mais informações.

        6. Ações Proibidas
        Você concorda em não:
        Utilizar o App para fins não autorizados.
        Carregar arquivos ou imagens maliciosos.
        Tentar burlar as medidas de segurança do App.

        7. Responsabilidade
        O IFAM não se responsabiliza por:
        Problemas causados por informações incorretas ou uso indevido do App.
        Acesso não autorizado à sua conta devido à negligência na proteção de suas credenciais de login.

        8. Alterações nos Termos
        Reservamo-nos o direito de atualizar estes Termos a qualquer momento. Alterações serão comunicadas por meio do App. O uso contínuo constitui aceitação dos Termos revisados.

        Ao usar este App, você reconhece e concorda com estes Termos e Condições.
        ]]>
    </string>
    <string-array name="local_options">
        <item>Aranouá</item>
        <item>Biblioteca</item>
        <item>BioInova</item>
        <item>CT</item>
        <item>CTzinho</item>
        <item>DILOG</item>
        <item>LG Academy</item>
        <item>NAPNE</item>
    </string-array>
    <string-array name="status_array">
        <item>Em aberto</item>
        <item>Em análise</item>
        <item>Avaliado</item>
        <item>Cancelado</item>
        <item>Iniciado</item>
        <item>Finalizado</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>