<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registroDeOcorrenciaFragment"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp" />

        <TextView
            android:id="@+id/warning"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:background="#FBDB5A"
            android:padding="5dp"
            android:text="@string/warning"
            android:textColor="@color/neutral_dark_900"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tituloLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/titulo"
            android:textColor="@color/neutral_dark_900"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tituloOcorrencia"
            android:layout_width="328dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:hint="@string/titulo_placeholder"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/localLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/local"
            android:textColor="@color/neutral_dark_900"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/local"
            android:layout_width="328dp"
            android:layout_height="56dp"
            android:hint="@string/local"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_especifico"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/neutral_dark_900"/>

        <EditText
            android:id="@+id/localEspecifico"
            android:layout_width="328dp"
            android:layout_height="56dp"
            android:hint="@string/local_especifico_placeholder"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="#000000"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/categoriaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/categoria"
            android:textColor="@color/neutral_dark_900"
            android:textSize="18sp" />


        <Spinner
            android:id="@+id/categoria"
            android:layout_width="328dp"
            android:layout_height="56dp"
            android:hint="@string/categoria"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/descricaoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/descricao"
            android:textSize="18sp"
            android:textColor="@color/neutral_dark_900"
            android:layout_marginStart="8dp"/>

        <EditText
            android:id="@+id/descricao"
            android:layout_width="328dp"
            android:layout_height="80dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/descricao_placeholder"
            android:inputType="textMultiLine"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/imagemLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/imagem"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            android:textColor="@color/neutral_dark_900"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/foto" />

            <TextView
                android:id="@+id/imageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="Arquivo PNG ou JPG"
                android:textSize="16sp"
                android:textColor="@color/neutral_dark_900" />
        </LinearLayout>


        <Button
            android:id="@+id/buttonEnviar"
            android:layout_width="328dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/primary_green_600"
            android:text="@string/enviar"
            android:textColor="@color/white"
            android:layout_marginStart="45dp"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</ScrollView>