<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="41.35dp"
        android:layout_height="56dp"
        android:src="@drawable/logo_verde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="168dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/email"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:background="@color/neutral_light_300"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email_institucional"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/neutral_dark_900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:background="@color/neutral_light_300"
        android:drawableStart="@drawable/senha_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColorHint="@color/neutral_dark_900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celular"
        app:layout_constraintVertical_bias="0.149" />

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/primary_green_600"
        android:text="@string/cadastrar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha"
        app:layout_constraintVertical_bias="0.372" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:background="@color/neutral_light_300"
        android:drawableStart="@drawable/person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nome"
        android:textColorHint="@color/neutral_dark_900"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.362" />

    <EditText
        android:id="@+id/celular"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:background="@color/neutral_light_300"
        android:drawableStart="@drawable/celular"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/celular"
        android:textColorHint="@color/neutral_dark_900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/minCaracter"
        android:layout_width="161dp"
        android:layout_height="24dp"
        android:text="@string/senha_min_caract"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/senha"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_invalido"
        android:textColor="@color/error_dark_900"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nome"
        app:layout_constraintTop_toBottomOf="@+id/nome"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_invalido"
        android:textColor="@color/error_dark_900"
        app:layout_constraintBottom_toTopOf="@+id/celular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celular_invalido"
        android:textColor="@color/error_dark_900"
        app:layout_constraintBottom_toTopOf="@+id/senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/celular"
        app:layout_constraintTop_toBottomOf="@+id/celular"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/senhaErroMensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/senha_invalido"
        android:textColor="@color/error_dark_900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/senha"
        app:layout_constraintTop_toBottomOf="@+id/senha"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
