<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/neutral_light_100"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/dialog_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/promover"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:cardCornerRadius="24dp"
                        android:layout_marginEnd="8dp">

                        <ImageView
                            android:id="@+id/imagem_usuario"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/imagem_usuario"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/person" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_nome_usuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/usuario"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/txt_email_usuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email" />

                        <TextView
                            android:id="@+id/txt_telefone_usuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/telefone" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonNao"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="8dp"
                        android:backgroundTint="@color/neutral_mid_600"
                        android:text="@string/nao" />

                    <Button
                        android:id="@+id/buttonSim"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="8dp"
                        android:backgroundTint="@color/primary_green_500"
                        android:text="@string/sim" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>